--- a/locales/all.ko-kr.yaml
+++ b/locales/all.ko-kr.yaml
@@ -11,6 +11,14 @@
 - id: Are you sure
   translation: 되돌릴 수 없습니다. 계속하시겠습니까?
 
+# administration
+- id: Data.Management
+  translation: 데이터 관리
+- id: Get.Notifications
+  translation: 공지 가져오기
+- id: Get.notifications.manually
+  translation: 수동으로 공지 가져오기
+
 # profile/settings
 
 - id: See.UART.Profile
@@ -97,6 +105,8 @@
   translation: 분류
 - id: Close
   translation: 닫기
+- id: Code
+  translation: 코드
 - id: Create
   translation: 생성
 - id: Created
